05-Metal&Traefik/06-Rancher/02-Rancher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher-servisi
  labels:
    app: rancher-demosu
spec:
  type: LoadBalancer
  selector:
    app: rancher-demosu
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
