05-Metal&Traefik/06-Rancher/04-Rancher-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: demorancher.techakademi.com
    http:
      paths:
      - backend:
          service:
            name: rancher-servisi
            port:
              number: 80
        path: /
        pathType: Prefix
